# crystal-launcher

./: .gitattributes  README.md
.github/workflows/: crystal_build.yml
api/: api.hpp  crystal_auth.cpp  crystal_discord.cpp  crystal_fabric.cpp  crystal_http.cpp  crystal_java.cpp  crystal_process.cpp  crystal_vanilla.cpp  mcapi_vanilla.cpp
gui/: CMakeLists.txt  gui.cpp  gui.h  gui.ui  resources.qrc
gui/gfx/: crystal_redirect.html  icon.rc
